--- a/styles/_breadcrumbs.scss
+++ b/styles/_breadcrumbs.scss
@@ -1,27 +1,32 @@
 /***** Breadcrumbs *****/
 .breadcrumbs {
-  @include tablet {
-    margin: 0;
-  }
-
-  margin: 0 0 15px 0;
-  padding: 0;
-
-  li {
-    color: $secondary-text-color;
-    display: inline;
-    font-weight: $font-weight-light;
-    font-size: $font-size-small;
-    max-width: 450px;
-    overflow: hidden;
-    text-overflow: ellipsis;
-
-    + li::before {
-      content: ">";
-      margin: 0 4px;
+    @include tablet {
+        margin: 0;
     }
-    a:visited {
-      color: $link_color;
+
+    margin: 0 0 15px 0;
+    padding: 0;
+
+    li {
+        color: $secondary-text-color;
+        display: inline;
+        font-weight: $font-weight-light;
+        font-size: $font-size-small;
+        max-width: 450px;
+        overflow: hidden;
+        text-overflow: ellipsis;
+
+        +li::before {
+            content: ">";
+            margin: 0 4px;
+        }
+
+        a:visited {
+            color: #c71f7e;
+        }
+
+        a {
+            color: #e61a8d
+        }
     }
-  }
 }
