--- a/styles/_section.scss
+++ b/styles/_section.scss
@@ -39,7 +39,7 @@
 
     a {
         align-items: center;
-        color: $text_color;
+        color: #c71f7e;
         display: flex;
         justify-content: space-between;
     }
