--- a/templates/category_page.hbs
+++ b/templates/category_page.hbs
@@ -1,5 +1,8 @@
 <div class="container" style="max-width:1300px;width:100%;position:relative;">
   <div class="ui divider"></div>
+  <nav class="sub-nav">
+    {{breadcrumbs}}
+  </nav>
   <div class="row">
     <header class="col-12 col-lg-8 order-2 order-lg-1 align-self-center" id="category-container">
       <h1 class="ui header">
@@ -43,6 +46,22 @@
       {{else}}
       {{#is @index 13}}
       {{else}}
+      {{#is @index 15}}
+      {{else}}
+      {{#is @index 16}}
+      {{else}}
+      {{#is @index 18}}
+      {{else}}
+      {{#is @index 19}}
+      {{else}}
+      {{#is @index 21}}
+      {{else}}
+      {{#is @index 22}}
+      {{else}}
+      {{#is @index 24}}
+      {{else}}
+      {{#is @index 25}}
+      {{else}}
       <div class="ui fluid vertical menu">
         <h3 class="header item">
           {{#if internal}}
@@ -71,6 +90,14 @@
         </a>
         {{/if}}
       </div>
+      {{/is}}
+      {{/is}}
+      {{/is}}
+      {{/is}}
+      {{/is}}
+      {{/is}}
+      {{/is}}
+      {{/is}}
       {{/is}}
       {{/is}}
       {{/is}}
@@ -104,6 +131,26 @@
       {{else}}
       {{#is @index 14}}
       {{else}}
+      {{#is @index 16}}
+      {{else}}
+      {{#is @index 17}}
+      {{else}}
+      {{#is @index 19}}
+      {{else}}
+      {{#is @index 20}}
+      {{else}}
+      {{#is @index 22}}
+      {{else}}
+      {{#is @index 23}}
+      {{else}}
+      {{#is @index 25}}
+      {{else}}
+      {{#is @index 26}}
+      {{else}}
+      {{#is @index 28}}
+      {{else}}
+      {{#is @index 29}}
+      {{else}}
       <div class="ui fluid vertical menu">
         <h3 class="header item">
           {{#if internal}}
@@ -132,6 +179,16 @@
         </a>
         {{/if}}
       </div>
+      {{/is}}
+      {{/is}}
+      {{/is}}
+      {{/is}}
+      {{/is}}
+      {{/is}}
+      {{/is}}
+      {{/is}}
+      {{/is}}
+      {{/is}}
       {{/is}}
       {{/is}}
       {{/is}}
@@ -164,6 +221,26 @@
       {{else}}
       {{#is @index 12}}
       {{else}}
+      {{#is @index 14}}
+      {{else}}
+      {{#is @index 15}}
+      {{else}}
+      {{#is @index 17}}
+      {{else}}
+      {{#is @index 18}}
+      {{else}}
+      {{#is @index 20}}
+      {{else}}
+      {{#is @index 21}}
+      {{else}}
+      {{#is @index 23}}
+      {{else}}
+      {{#is @index 24}}
+      {{else}}
+      {{#is @index 26}}
+      {{else}}
+      {{#is @index 27}}
+      {{else}}
       <div class="ui fluid vertical menu">
         <h3 class="header item">
           {{#if internal}}
@@ -192,6 +269,16 @@
         </a>
         {{/if}}
       </div>
+      {{/is}}
+      {{/is}}
+      {{/is}}
+      {{/is}}
+      {{/is}}
+      {{/is}}
+      {{/is}}
+      {{/is}}
+      {{/is}}
+      {{/is}}
       {{/is}}
       {{/is}}
       {{/is}}
