--- a/templates/section_page.hbs
+++ b/templates/section_page.hbs
@@ -64,6 +64,9 @@
 
 <div class="container" style="max-width:1300px;width:100%;position:relative;">
   <div class="ui divider"></div>
+    <nav class="sub-nav">
+    {{breadcrumbs}}
+  </nav>
   <div class="row">
   	<header class="col-12 col-lg-8 order-2 order-lg-1 align-self-center" id ="section-container">
       <h1 class="ui header">
