--- a/styles/_forms.scss
+++ b/styles/_forms.scss
@@ -86,8 +86,9 @@
 }
 
 .form footer {
-  margin-top: 40px;
-  padding-top: 30px;
+  text-align: center;
+  margin: 40px 0;
+  // padding-top: 30px;
 }
 
 .form footer a {
