--- a/styles/_sub-nav.scss
+++ b/styles/_sub-nav.scss
@@ -7,9 +7,9 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  margin-bottom: 30px;
+  // margin-bottom: 30px;
   min-height: 50px;
-  padding-bottom: 15px;
+  // padding-bottom: 15px;
 
   //Inner pages search field
   input[type="search"] {
