--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -4,7 +4,7 @@
 $brand_color: #0072ef !default;
 $brand_text_color: #fff !default; //Color for text with an accent color background
 $text_color: #333 !default;
-$link_color: #0072ef !default;
+$link_color: #0E6EB8 !default;
 $background_color: #fff !default;
 
 $visited-link-color: zass-darken($link_color, 20%);
