--- a/templates/article_page.hbs
+++ b/templates/article_page.hbs
@@ -1,5 +1,5 @@
-<div class="container-divider"></div>
 <div class="container">
+  <div class="ui divider"></div>
   <nav class="sub-nav">
     {{breadcrumbs}}
     {{search scoped=settings.scoped_kb_search submit=false}}
@@ -8,19 +8,19 @@
   <div class="article-container" id="article-container">
     <section class="article-sidebar">
       {{#if settings.show_articles_in_section}}
-        <section class="section-articles collapsible-sidebar">
+      <section class="section-articles collapsible-sidebar">
         <h3 class="collapsible-sidebar-title sidenav-title">{{t 'articles_in_section'}}</h3>
         <ul>
           {{#each section.articles}}
-            <li>
-              <a href="{{url}}" class="sidenav-item {{#is id ../article.id}}current-article{{/is}}">{{title}}</a>
-            </li>
+          <li>
+            <a href="{{url}}" class="sidenav-item {{#is id ../article.id}}current-article{{/is}}">{{title}}</a>
+          </li>
           {{/each}}
         </ul>
         {{#if section.more_articles}}
-          <a href="{{section.url}}" class="article-sidebar-item">{{t 'see_more'}}</a>
+        <a href="{{section.url}}" class="article-sidebar-item">{{t 'see_more'}}</a>
         {{/if}}
-        </section>
+      </section>
       {{/if}}
     </section>
 
@@ -29,14 +29,14 @@
         <h1 title="{{article.title}}" class="article-title">
           {{article.title}}
           {{#if article.internal}}
-            <span class="icon-lock" title="{{t 'internal'}}"></span>
+          <span class="icon-lock" title="{{t 'internal'}}"></span>
           {{/if}}
         </h1>
 
         <div class="article-author">
-          {{#if settings.show_article_author}}
-            <div class="avatar article-avatar">
-              {{#if article.author.agent}}
+          {{!-- {{#if settings.show_article_author}} --}}
+          {{!-- <div class="avatar article-avatar"> --}}
+          {{!-- {{#if article.author.agent}}
                 <span class="icon-agent"></span>
               {{/if}}
               <img src="{{article.author.avatar_url}}" alt="" class="user-avatar"/>
@@ -47,39 +47,42 @@
               {{#link 'user_profile' id=article.author.id}}
                 {{article.author.name}}
               {{/link}}
-            {{/if}}
+            {{/if}} --}}
 
-            <ul class="meta-group">
-              {{#is article.created_at article.edited_at}}
-                <li class="meta-data">{{date article.created_at timeago=true}}</li>
-              {{else}}
-                <li class="meta-data">{{date article.edited_at timeago=true}}</li>
-                <li class="meta-data">{{t 'updated'}}</li>
-              {{/is}}
-            </ul>
-          </div>
+          <ul class="meta-group">
+            {{#is article.created_at article.edited_at}}
+            <li class="meta-data">{{date article.created_at timeago=true}}</li>
+            {{else}}
+            <li class="meta-data">{{date article.edited_at timeago=true}}</li>
+            <li class="meta-data">{{t 'updated'}}</li>
+            {{/is}}
+          </ul>
+          {{!-- </div> --}}
         </div>
 
-        {{#if settings.show_follow_article}}
+        {{!-- {{#if settings.show_follow_article}}
           {{subscribe}}
-        {{/if}}
+        {{/if}} --}}
       </header>
 
       <section class="article-info">
         <div class="article-content">
           <div class="article-body">{{article.body}}</div>
+          {{#if attachments}}
+          <h3>Attachments</h3>
 
           <div class="article-attachments">
             <ul class="attachments">
               {{#each attachments}}
-                <li class="attachment-item">
-                  <a href="{{url}}" target="_blank">{{name}}</a>
-                  <div class="attachment-meta meta-group">
-                    <span class="attachment-meta-item meta-data">{{size}}</span>
-                    <a href="{{url}}" target="_blank" class="attachment-meta-item meta-data">Download</a>
-                  </div>
-                </li>
+              <li class="attachment-item">
+                <a href="{{url}}" target="_blank">{{name}}</a>
+                <div class="attachment-meta meta-group">
+                  <span class="attachment-meta-item meta-data">{{size}}</span>
+                  <a href="{{url}}" target="_blank" class="attachment-meta-item meta-data">Download</a>
+                </div>
+              </li>
               {{/each}}
+              {{/if}}
             </ul>
           </div>
         </div>
@@ -88,32 +91,32 @@
       <footer>
         <div class="article-footer">
           {{#if settings.show_article_sharing}}
-            <div class="article-share">{{share}}</div>
+          <div class="article-share">{{share}}</div>
           {{/if}}
           {{#if settings.show_article_comments}}
-            {{#if comments}}
-              <a href="#article-comments" class="article-comment-count">
-                <span class="icon-comments"></span>
-                {{article.comment_count}}
-              </a>
-            {{/if}}
+          {{#if comments}}
+          <a href="#article-comments" class="article-comment-count">
+            <span class="icon-comments"></span>
+            {{article.comment_count}}
+          </a>
+          {{/if}}
           {{/if}}
         </div>
         {{#with article}}
-          <div class="article-votes">
-            <span class="article-votes-question">{{t 'was_this_article_helpful'}}</span>
-            <div class="article-votes-controls" role='radiogroup'>
-              {{vote 'up' role='radio' class='button article-vote article-vote-up'}}
-              {{vote 'down' role='radio' class='button article-vote article-vote-down'}}
-            </div>
-            <small class="article-votes-count">
-              {{vote 'label' class='article-vote-label'}}
-            </small>
+        <div class="article-votes">
+          <span class="article-votes-question">{{t 'was_this_article_helpful'}}</span>
+          <div class="article-votes-controls" role='radiogroup'>
+            {{vote 'up' role='radio' class='button article-vote article-vote-up'}}
+            {{vote 'down' role='radio' class='button article-vote article-vote-down'}}
           </div>
+          <small class="article-votes-count">
+            {{vote 'label' class='article-vote-label'}}
+          </small>
+        </div>
         {{/with}}
 
         <div class="article-more-questions">
-          {{request_callout}}
+          {{!-- {{request_callout}} --}}
         </div>
         <div class="article-return-to-top">
           <a href="#article-container">{{t 'return_to_top'}}<span class="icon-arrow-up"></span></a>
@@ -122,13 +125,13 @@
 
       <section class="article-relatives">
         {{#if settings.show_recently_viewed_articles}}
-          {{recent_articles}}
+        {{recent_articles}}
         {{/if}}
         {{#if settings.show_related_articles}}
-          {{related_articles}}
+        {{related_articles}}
         {{/if}}
       </section>
-      {{#if settings.show_article_comments}}
+      {{!-- {{#if settings.show_article_comments}}
         <div class="article-comments" id="article-comments">
           <section class="comments">
             <header class="comment-overview">
@@ -225,7 +228,7 @@
             <p class="comment-callout">{{comment_callout}}</p>
           </section>
         </div>
-      {{/if}}
+      {{/if}} --}}
     </article>
   </div>
 </div>
