--- a/templates/footer.hbs
+++ b/templates/footer.hbs
@@ -219,7 +219,138 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.13/semantic.min.js"
   integrity="sha384-xfhRYqbW4Asj6UIfXB+Fp7GsmhF9uCf4R+oIGrp7YaBMAmlQWihnvGrW2WbdQRIS" crossorigin="anonymous"></script>
 <script>
-  function slider() { $(document).scrollTop() > 199 ? $("#icon").stop().animate({ top: "0" }) : $("#icon").stop().animate({ top: "-200%" }) } function getPageInfo() { var e = window.location.href.split("/hc/"); return { type: (e = e[1].split("-")[1].split("/"))[1], id: e[2] } } $(document).ready(function () { $(".share a").click(function (e) { e.preventDefault(), window.open(this.href, "", "height = 500, width = 500") }); var e = $(".comment-container textarea"), t = $(".comment-form-controls, .comment-ccs"); e.one("focus", function () { t.show() }), "" !== e.val() && t.show(); var i = $(".request-container .comment-container .comment-show-container"), n = $(".request-container .comment-container .comment-fields"), a = $(".request-container .comment-container .request-submit-comment"); i.on("click", function () { i.hide(), n.show(), a.show(), e.focus() }); var s = $(".request-container .mark-as-solved:not([data-disabled])"), o = $(".request-container .comment-container input[type=checkbox]"), r = $(".request-container .comment-container input[type=submit]"); s.on("click", function () { o.attr("checked", !0), r.prop("disabled", !0), $(this).attr("data-disabled", !0).closest("form").submit() }); var c = $(".request-container .comment-container textarea"); function l() { window.location.search = $.param({ query: $("#quick-search").val(), status: $("#request-status-select").val(), organization_id: $("#request-organization-select").val() }) } if (c.on("keyup", function () { "" !== c.val() ? (s.text(s.data("solve-and-submit-translation")), r.prop("disabled", !1)) : (s.text(s.data("solve-translation")), r.prop("disabled", !0)) }), "" === c.val() && r.prop("disabled", !0), $("#request-status-select, #request-organization-select").on("change", function () { l() }), $("#quick-search").on("keypress", function (e) { 13 === e.which && l() }), $(".header .icon-menu").on("click", function (e) { e.stopPropagation(); var t = document.getElementById("user-nav"), i = "true" === t.getAttribute("aria-expanded"); t.setAttribute("aria-expanded", !i) }), 0 === $("#user-nav").children().length && $(".header .icon-menu").hide(), $("#request-organization select").on("change", function () { this.form.submit() }), $(".collapsible-nav, .collapsible-sidebar").on("click", function (e) { e.stopPropagation(); var t = "true" === this.getAttribute("aria-expanded"); this.setAttribute("aria-expanded", !t) }), $(".ui.dropdown").dropdown(), $.get("https://blog.organicstart.com/rss/", function (e) { var t = 0; $(e).find("item").each(function () { if ($("#recent-posts").append($("<a></a>").attr("class", "item").attr("href", $(this).find("link").text()).append($(this).find("title").text().substring(0, 45) + "...")), 5 == ++t) return !1 }) }), "requests" == getPageInfo().type && (document.getElementById("section_request").style.display = "none"), $(".back ol.breadcrumbs li:last-child").children().length) { var d = $("#title").text(); $(".back ol.breadcrumbs").append('<li title="' + d + '" class="active"><a href="#">' + d + "</a></li>") } else d = $(".back ol.breadcrumbs li:last-child").text(), $(".back ol.breadcrumbs li:last-child").text(""), $(".back ol.breadcrumbs li:last-child").append('<a href="#">' + d + "</a>"), $(".back ol.breadcrumbs li:last-child").addClass("active"); $("#menuTrigger").click(function () { $(".ui.sidebar").sidebar("toggle") }), $("#sidebar-close").click(function () { $(".ui.sidebar").sidebar("toggle") }), $(".pusher.dimmed").click(function (e) { e.preventDefault(), $(".ui.sidebar").sidebar("toggle") }), $("#subscribe input i").click(function () { $("#subscribe").submit() }); var u = function (e) { var t, i, n = decodeURIComponent(window.location.search.substring(1)).split("&"); for (i = 0; i < n.length; i++)if ((t = n[i].split("="))[0] === e) return void 0 === t[1] || t[1] }; "/hc/requests" == u("return_to") && (window.location = "https://support.organicstart.com/hc/en-us/requests/new?submit=true"), "true" == u("submit") && $("#new_request_done").removeClass("d-none"), $("#inventory-key").append('      <div class="inventory-key">        <div class="sold-out item">Sold Out</div>        <div class="selling-out item">Limited</div>        <div class="lowest item">Selling Out</div>        <div class="low item">Low</div>        <div class="enough item">Moderate</div>        <div class="alot item">Sufficient</div>        <div class="full item">Full</div>      </div>      <div class="ui divider"></div>'), $(".prog").each(function (e) { if ("" != $(this).text().trim()) if ("divider" == $(this).text().trim()) $("#inventory").append('<div class="ui divider"></div>'); else { var t = $(this).text().split(":"); if ("title" == t[0]) $("#inventory").append('<h2 class="mb-3">' + t[1] + "</h2>"); else { if (t[1] > 74) var i = "green"; else i = t[1] > 49 ? "yellow" : t[1] > 24 ? "orange" : "red"; if ("00-00-0000" != t[2].trim()) { var n = !0, a = t[2].split("-"); $.timeago.settings.allowPast = !1, $.timeago.settings.allowFuture = !0; var s = $.timeago(a[2] + "-" + a[0] + "-" + a[1]) } else n = !1; $("#inventory").append('<div class="label"><strong>' + t[0] + "</strong>" + (1 == n ? '<p class="float-right">Restock in about  ' + s.replace("about ", "").replace(" from now", "") + ".</p>" : "") + '</div><div class="ui ' + i + ' indicating progress mt-0" data-percent="' + t[1] + '" id="bar-' + e + '" style="height:100%;"><div class="bar" style="width:' + t[1] + '%!important;min-width:0!important"></div></div>') } } }) }), $(window).scroll(function () { slider(), $(document).scrollTop() > $(".ui.main.menu").height() ? ($(".ui.site.menu").addClass("top"), $(".ui.site.menu").addClass("fixed"), $("body").css("padding-top", "6rem")) : ($(".ui.site.menu").removeClass("top"), $(".ui.site.menu").removeClass("fixed"), $("body").css("padding-top", "0")) });
+  function slider() {
+    $(document).scrollTop() > 199 ? $("#icon").stop().animate({
+      top: "0"
+    }) : $("#icon").stop().animate({
+      top: "-200%"
+    })
+  }
+
+  function getPageInfo() {
+    var e = window.location.href.split("/hc/");
+    return {
+      type: (e = e[1].split("-")[1].split("/"))[1],
+      id: e[2]
+    }
+  }
+  $(document).ready(function () {
+    $.ajax({
+      crossOrigin: true, type: "GET", url: 'https://cors-anywhere.herokuapp.com/https://blog.organicstart.com/rss/', success: function (data) {
+
+        var count = 0;
+        $(data).find('item').each(function () {
+          $('#recent-posts').append($('<a></a>').attr('class', 'item').attr('href', $(this).find('link').text()).append($(this).find('title').text().substring(0, 45) + '...'));
+          count++;
+          if (count == 5) {
+            return false;
+          }
+        });
+      }
+    });
+
+
+    $(".share a").click(function (e) {
+      e.preventDefault(), window.open(this.href, "", "height = 500, width = 500")
+    });
+    var e = $(".comment-container textarea"),
+      t = $(".comment-form-controls, .comment-ccs");
+    e.one("focus", function () {
+      t.show()
+    }), "" !== e.val() && t.show();
+    var i = $(".request-container .comment-container .comment-show-container"),
+      n = $(".request-container .comment-container .comment-fields"),
+      a = $(".request-container .comment-container .request-submit-comment");
+    i.on("click", function () {
+      i.hide(), n.show(), a.show(), e.focus()
+    });
+    var s = $(".request-container .mark-as-solved:not([data-disabled])"),
+      o = $(".request-container .comment-container input[type=checkbox]"),
+      r = $(".request-container .comment-container input[type=submit]");
+    s.on("click", function () {
+      o.attr("checked", !0), r.prop("disabled", !0), $(this).attr("data-disabled", !0).closest("form").submit()
+    });
+    var c = $(".request-container .comment-container textarea");
+
+    function l() {
+      window.location.search = $.param({
+        query: $("#quick-search").val(),
+        status: $("#request-status-select").val(),
+        organization_id: $("#request-organization-select").val()
+      })
+    }
+    if (c.on("keyup", function () {
+      "" !== c.val() ? (s.text(s.data("solve-and-submit-translation")), r.prop("disabled", !1)) : (s.text(s.data("solve-translation")), r.prop("disabled", !0))
+    }), "" === c.val() && r.prop("disabled", !0), $("#request-status-select, #request-organization-select").on("change", function () {
+      l()
+    }), $("#quick-search").on("keypress", function (e) {
+      13 === e.which && l()
+    }), $(".header .icon-menu").on("click", function (e) {
+      e.stopPropagation();
+      var t = document.getElementById("user-nav"),
+        i = "true" === t.getAttribute("aria-expanded");
+      t.setAttribute("aria-expanded", !i)
+    }), 0 === $("#user-nav").children().length && $(".header .icon-menu").hide(), $("#request-organization select").on("change", function () {
+      this.form.submit()
+    }), $(".collapsible-nav, .collapsible-sidebar").on("click", function (e) {
+      e.stopPropagation();
+      var t = "true" === this.getAttribute("aria-expanded");
+      this.setAttribute("aria-expanded", !t)
+    }), $(".ui.dropdown").dropdown(), $.get("https://blog.organicstart.com/rss/", function (e) {
+      var t = 0;
+      $(e).find("item").each(function () {
+        if ($("#recent-posts").append($("<a></a>").attr("class", "item").attr("href", $(this).find("link").text()).append($(this).find("title").text().substring(0, 45) + "...")), 5 == ++t) return !1
+      })
+    }), "requests" == getPageInfo().type && (document.getElementById("section_request").style.display = "none"), $(".back ol.breadcrumbs li:last-child").children().length) {
+      var d = $("#title").text();
+      $(".back ol.breadcrumbs").append('<li title="' + d + '" class="active"><a href="#">' + d + "</a></li>")
+    } else d = $(".back ol.breadcrumbs li:last-child").text(), $(".back ol.breadcrumbs li:last-child").text(""), $(".back ol.breadcrumbs li:last-child").append('<a href="#">' + d + "</a>"), $(".back ol.breadcrumbs li:last-child").addClass("active");
+    $("#menuTrigger").click(function () {
+      $(".ui.sidebar").sidebar("toggle")
+    }), $("#sidebar-close").click(function () {
+      $(".ui.sidebar").sidebar("toggle")
+    }), $(".pusher.dimmed").click(function (e) {
+      e.preventDefault(), $(".ui.sidebar").sidebar("toggle")
+    }), $("#subscribe input i").click(function () {
+      $("#subscribe").submit()
+    });
+    var u = function (e) {
+      var t, i, n = decodeURIComponent(window.location.search.substring(1)).split("&");
+      for (i = 0; i < n.length; i++)
+        if ((t = n[i].split("="))[0] === e) return void 0 === t[1] || t[1]
+    };
+    "/hc/requests" == u("return_to") && (window.location = "https://support.organicstart.com/hc/en-us/requests/new?submit=true"),
+      "true" == u("submit") && $("#new_request_done").removeClass("d-none"),
+      $.get("https://brainiac.organicstart.com/fb/getinventory").then(x => {
+
+        $("#inventory-key").append('      <div class="inventory-key">        <div class="sold-out item">Sold Out</div>        <div class="selling-out item">Limited</div>        <div class="lowest item">Selling Out</div>        <div class="low item">Low</div>        <div class="enough item">Moderate</div>        <div class="alot item">Sufficient</div>        <div class="full item">Full</div>      </div>      <div class="ui divider"></div>')
+        $(x.join("")).appendTo("#inventory");
+        console.log(x)
+
+
+        $(".prog").each(function (e) {
+          if ("" != $(this).text().trim())
+            if ("divider" == $(this).text().trim()) $("#inventory").append('<div class="ui divider"></div>');
+            else {
+              var t = $(this).text().split(":");
+              if ("title" == t[0]) $("#inventory").append('<h2 class="mb-3">' + t[1] + "</h2>");
+              else {
+                if (t[1] > 74) var i = "green";
+                else i = t[1] > 49 ? "yellow" : t[1] > 24 ? "orange" : "red";
+                if ("00-00-0000" != t[2].trim()) {
+                  var n = !0,
+                    a = t[2].split("-");
+                  $.timeago.settings.allowPast = !1, $.timeago.settings.allowFuture = !0;
+                  var s = $.timeago(a[2] + "-" + a[0] + "-" + a[1])
+                } else n = !1;
+                $("#inventory").append('<div class="label"><strong>' + t[0] + "</strong>" + (1 == n ? '<p class="float-right">Restock in about  ' + s.replace("about ", "").replace(" from now", "") + ".</p>" : "") + '</div><div class="ui ' + i + ' indicating progress mt-0" data-percent="' + t[1] + '" id="bar-' + e + '" style="height:100%;"><div class="bar" style="width:' + t[1] + '%!important;min-width:0!important"></div></div>')
+              }
+            }
+        })
+      })
+  }), $(window).scroll(function () {
+    slider(), $(document).scrollTop() > $(".ui.main.menu").height() ? ($(".ui.site.menu").addClass("top"), $(".ui.site.menu").addClass("fixed"), $("body").css("padding-top", "6rem")) : ($(".ui.site.menu").removeClass("top"), $(".ui.site.menu").removeClass("fixed"), $("body").css("padding-top", "0"))
+  });
   $(function () {
     if (getPageInfo().id == '115000448613') {
       $('#lacey-nutrition').removeClass('d-none');
