--- a/styles/_organicstart.scss
+++ b/styles/_organicstart.scss
@@ -20,3 +20,7 @@ i.flag:not(.icon):before{background:url('$assets-flags-png') no-repeat -108px -1
 .ui.main.menu {
   margin: 0!important;
 }
+
+.pink-text {
+  color: #ff8edf
+}
