--- a/templates/article_page.hbs
+++ b/templates/article_page.hbs
@@ -4,7 +4,7 @@
     {{breadcrumbs}}
     {{search scoped=settings.scoped_kb_search submit=false}}
   </nav>
-
+  <div class="ui divider"></div>
   <div class="article-container" id="article-container">
     <section class="article-sidebar">
       {{#if settings.show_articles_in_section}}
@@ -53,8 +53,8 @@
             {{#is article.created_at article.edited_at}}
             <li class="meta-data">{{date article.created_at timeago=true}}</li>
             {{else}}
-            <li class="meta-data">{{date article.edited_at timeago=true}}</li>
             <li class="meta-data">{{t 'updated'}}</li>
+            <li class="meta-data">{{date article.edited_at timeago=true}}</li>
             {{/is}}
           </ul>
           {{!-- </div> --}}
@@ -85,52 +85,57 @@
               {{/if}}
             </ul>
           </div>
+          <footer>
+            <div class="article-footer">
+              {{!-- {{#if settings.show_article_sharing}}
+              <div class="article-share">{{share}}</div>
+              {{/if}} --}}
+              {{#if settings.show_article_comments}}
+              {{#if comments}}
+              <a href="#article-comments" class="article-comment-count">
+                <span class="icon-comments"></span>
+                {{article.comment_count}}
+              </a>
+              {{/if}}
+              {{/if}}
+            </div>
+            {{#with article}}
+            <div class="article-votes">
+              <span class="article-votes-question">{{t 'was_this_article_helpful'}}</span>
+              <div class="article-votes-controls" role='radiogroup'>
+                {{vote 'up' role='radio' class='button article-vote article-vote-up'}}
+                {{vote 'down' role='radio' class='button article-vote article-vote-down'}}
+              </div>
+              <small class="article-votes-count">
+                {{vote 'label' class='article-vote-label'}}
+              </small>
+            </div>
+            {{/with}}
+
+            <div class="article-more-questions">
+              {{!-- {{request_callout}} --}}
+            </div>
+            <div class="article-return-to-top">
+              <a href="#article-container">{{t 'return_to_top'}}<span class="icon-arrow-up"></span></a>
+            </div>
+          </footer>
+
+          <section class="article-relatives">
+            {{#if settings.show_related_articles}}
+            {{related_articles}}
+            {{/if}}
+            {{#if settings.show_recently_viewed_articles}}
+            {{recent_articles}}
+            {{/if}}
+
+          </section>
         </div>
+
       </section>
 
-      <footer>
-        <div class="article-footer">
-          {{#if settings.show_article_sharing}}
-          <div class="article-share">{{share}}</div>
-          {{/if}}
-          {{#if settings.show_article_comments}}
-          {{#if comments}}
-          <a href="#article-comments" class="article-comment-count">
-            <span class="icon-comments"></span>
-            {{article.comment_count}}
-          </a>
-          {{/if}}
-          {{/if}}
-        </div>
-        {{#with article}}
-        <div class="article-votes">
-          <span class="article-votes-question">{{t 'was_this_article_helpful'}}</span>
-          <div class="article-votes-controls" role='radiogroup'>
-            {{vote 'up' role='radio' class='button article-vote article-vote-up'}}
-            {{vote 'down' role='radio' class='button article-vote article-vote-down'}}
-          </div>
-          <small class="article-votes-count">
-            {{vote 'label' class='article-vote-label'}}
-          </small>
-        </div>
-        {{/with}}
 
-        <div class="article-more-questions">
-          {{!-- {{request_callout}} --}}
-        </div>
-        <div class="article-return-to-top">
-          <a href="#article-container">{{t 'return_to_top'}}<span class="icon-arrow-up"></span></a>
-        </div>
-      </footer>
 
-      <section class="article-relatives">
-        {{#if settings.show_recently_viewed_articles}}
-        {{recent_articles}}
-        {{/if}}
-        {{#if settings.show_related_articles}}
-        {{related_articles}}
-        {{/if}}
-      </section>
+
       {{!-- {{#if settings.show_article_comments}}
         <div class="article-comments" id="article-comments">
           <section class="comments">
