--- a/templates/section_page.hbs
+++ b/templates/section_page.hbs
@@ -91,7 +91,7 @@
 				<img class="img-fluid mx-auto" src="{{asset 'lacey-qas.png'}}">
       </div>
       <div class="section col-12 col-md-6 col-lg-8" id="mainside">
-      	 <div class="ui large fluid vertical menu">
+      	 <div class="ui huge fluid vertical menu">
           {{#each section.articles}}
               {{#if promoted}}
                 <span data-title="{{t 'promoted'}}" class="icon-star"></span>
