--- a/styles/_article.scss
+++ b/styles/_article.scss
@@ -12,9 +12,11 @@
         min-width: 640px;
         padding: 0 30px;
     }
+
     a {
         color: #0E6EB8;
     }
+
     flex: 1 0 auto; //Explicit values needed whith flex-direction: column for IE11
 
     &-container {
@@ -138,6 +140,10 @@
             color: $text_color
         }
 
+       &-item a:hover {
+            color: #c71f7e
+        }
+
         a {
             color: #e61a8d
         }
@@ -172,7 +178,7 @@
 
 
     &-votes {
-        border-top: 1px solid $border-color;
+        // border-top: 1px solid $border-color;
         padding: 30px 0;
         text-align: center;
     }
@@ -189,6 +195,7 @@
             @extend .icon;
             font-size: 8px;
             margin-right: 10px;
+            color: #e61a8d;
 
             [dir="rtl"] & {
                 margin-right: 0;
