replaced copenhagen icon. rm uneeded style links

--- a/templates/new_request_page.hbs
+++ b/templates/new_request_page.hbs
@@ -63,27 +63,8 @@
           target="_blank">Click here to compare key ingredients such as soy, starch and more between brands and stages
           in a simple comparison chart.</a>
       </p>
-      <div class="ui negative icon message mb-4">
-        <i class="warning icon"></i>
-        <div class="content">
-          <p>
-            <strong>Unfortunately at this time HiPP has limited supply of German HA &amp; Dutch. We are not sure when
-              these products will be back in-stock. We are waiting on many pallets of product from HiPP.<br><br><a
-                href="https://organicstartwholesale.com" target="_blakn">Organic Start Wholesale</a> will be the first
-              to have these products back in-stock. You can subscribe to be notified at their listings on the
-              site.</strong><br><br>
-            Here are suitable alternatives to Dutch:<br>
-            Dutch Stage 1 -> <a href="https://organicstart.com/hipp/germany/stage-pre/" target="_blank">German Stage
-              PRE</a> or <a href="https://organicstart.com/hipp/uk/stage-1/" target="_blank">UK Stage 1</a><br>
-            Dutch Stage 2 -> <a href="https://organicstart.com/hipp/germany/stage-2/" target="_blank">German Stage 2
-              without Starch</a><br>
-            Dutch Stage 3 -> <a href="https://organicstart.com/hipp/uk/stage-3/" target="_blank">UK Stage 3</a>
-            <br><br>
-            <strong>We do not have any other stores that we can recommend that sell these products.</strong>
-          </p>
-        </div>
-      </div>
-      <div class="ui warning icon message mb-4">
+
+      <div class="ui info icon message mb-4">
         <i class="question icon"></i>
         <div class="content">
           <p>
