--- a/templates/footer.hbs
+++ b/templates/footer.hbs
@@ -20,45 +20,32 @@
     </div>
   </div>
 </footer> --}}
-
-<section id="section_request" class="ui vertical segment border-0 mb-5 pt-0 pb-0">
-  <div class="container">
-    <div class="ui divider mt-0"></div>
-    <h3 class="ui header">Disclaimer</h4>
-      <p>
-        <small>Any information found on this website or provided by the Organic Start Support Team has been obtained by
-          Organic Start from sources believed to be reliable. The accuracy, completeness, timeliness or correct
-          sequencing
-          of any information found on this website or provided by the Organic Start Support Team, however, is never
-          guaranteed by Organic Start. Organic Start reserves the right to change any information, terms, conditions and
-          policies at anytime without notice. Organic Start does not make any express or implied warranties (including,
-          without limitation, any warranty or merchantability or fitness for a particular purpose or use) regarding
-          information from this website or provided by the Organic Start Support Team. Organic Start will not be liable
-          to
-          anyone for interruption, inaccuracy, error or omission, regardless of cause, in information from this website
-          or
-          information provided from the Organic Start Support Team or for any damages (whether direct or indirect,
-          consequential, punitive or exemplary) resulting therefrom. Always first consult with a pediatrician or
-          certified
-          professional.</small>
-      </p>
-  </div>
-</section>
-<section id="section_request" class="ui vertical segment border-0 mb-5 pt-0 pb-0">
-  <div class="container">
-    <div class="ui divider mt-0"></div>
+<section id="section_request" class="my-5 py-5 container">
+  <div class="ui large inverted segment border-0 rounded-lg-pill py-5 px-3 px-lg-5" style="background-image: linear-gradient(to right, #ff758c 0%, #ff7eb3 100%);">
     <div class="row">
       <header class="col-12 col-lg-8 align-self-center text-center text-lg-left mb-5 mb-lg-0" id="category-container">
-        <h1 class="ui header">
+        <h2 class="fredoka text-white m-0">
           Can't Find Your Question?
-        </h1>
-        <h2 class="ui header">
-          <div class="sub header">Your unique questions help build our knowledge base.</div>
         </h2>
+        <p class="varela text-white m-0">
+          Your unique questions help build our knowledge base.
+        </p>
       </header>
       <div class="col-12 col-sm-10 offset-sm-1 col-md-8 offset-md-2 col-lg-4 offset-lg-0 align-self-center text-center">
-        <a href="https://support.organicstart.com/hc/en-us/requests/new" class="ui large fluid pink button"
-          title="Submit a Request">Submit a Request</a>
+        <a href="https://support.organicstart.com/hc/en-us/requests/new" class="varela ui large fluid button rounded-pill" title="Submit a Request" style="background:#fff!important;">Submit a Request</a>
+      </div>
+    </div>
+  </div>
+</section>
+<section class="ui vertical segment border-0 my-5 py-5">
+  <div class="container">
+    <div class="ui accordion">
+      <div class="active title">
+        <i class="dropdown icon"></i>
+        Disclaimer
+      </div>
+      <div class="active content">
+        <p>Information found on this website or provided by the Organic Start Support Team has been obtained by Organic Start from sources believed to be reliable. The accuracy, completeness, timeliness or correct sequencing of information found on this website and provided by the Organic Start Support Team, however, is never guaranteed. Manufacturers may later change or update their ingredients and instructions. Do not soley rely on the information presented and always read labels, warnings and directions before using, consuming or feeding a product. Actual product packaging and materials may contain more and/or different information.<br><br>Statements regarding supplemental products have not been evaluated by the Food and Drug Administration and are not intended to diagnose, treat, cure, or prevent any disease or health condition. You should not use information on this website and provided by the Organic Start Support Team as self-diagnosis or for treating a health problem or disease. Content on this website or provided by the Organic Start Support Team is for reference purposes and is not intended to substitute for advice given by a physician, pharmacist, or other licensed health-care professional. Always contact your health-care provider immediately if you suspect that you or your baby has a medical problem. It always best to first consult with a pediatrician or certified health-care professional.<br><br>Organic Start, Inc. (OrganicStart.com) assumes no liability for inaccuracies or misstatements about products. Organic Start reserves the right to change any information, terms, conditions and policies at anytime without notice. Organic Start does not make any express or implied warranties (including, without limitation, any warranty or merchantability or fitness for a particular purpose or use) regarding information from this website or provided by the Organic Start Support Team. Organic Start, Inc. (OrganicStart.com) assumes no liability for interruption, inaccuracy, error or omission, regardless of cause, in information on this website or provided by the Organic Start Support Team or for any damages (whether direct or indirect, consequential, punitive or exemplary) resulting therefrom.</p>
       </div>
     </div>
   </div>
@@ -210,14 +197,8 @@
   </nav>
 </footer>
 
-
-
-<script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"
-  integrity="sha384-bPV3mA2eo3edoq56VzcPBmG1N1QVUfjYMxVIJPPzyFJyFZ8GFfN7Npt06Zr23qts" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-timeago/1.6.1/jquery.timeago.min.js"
-  integrity="sha384-2inFZ94qh1Esdr8qXMspFwIpFT1m9RAXWGgQCMgnRYAo7tDfOOip0uyue2LvfQ33" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.13/semantic.min.js"
-  integrity="sha384-xfhRYqbW4Asj6UIfXB+Fp7GsmhF9uCf4R+oIGrp7YaBMAmlQWihnvGrW2WbdQRIS" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-timeago/1.6.1/jquery.timeago.min.js" integrity="sha384-2inFZ94qh1Esdr8qXMspFwIpFT1m9RAXWGgQCMgnRYAo7tDfOOip0uyue2LvfQ33" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.js" integrity="sha384-6urqf2sgCGDfIXcoxTUOVIoQV+jFr/Zuc4O2wCRS6Rnd8w0OJ17C4Oo3PuXu8ZtF" crossorigin="anonymous"></script>
 <script>
   function slider() {
     $(document).scrollTop() > 199 ? $("#icon").stop().animate({
@@ -235,6 +216,7 @@
     }
   }
   $(document).ready(function () {
+    $('.ui.accordion').accordion();
     $.ajax({
       crossOrigin: true, type: "GET", url: 'https://cors-anywhere.herokuapp.com/https://blog.organicstart.com/rss/', success: function (data) {
 
